--- a/Book_Summary_Wrapper.ipynb
+++ b/Book_Summary_Wrapper.ipynb
@@ -1,128 +1,40 @@
-{
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "cells": [
-    {
-      "cell_type": "code",
-      "source": [
-        "import openai\n",
-        "import os\n",
-        "import time\n",
-        "from openai.error import RateLimitError\n",
-        "from dotenv import load_dotenv\n",
-        "\n",
-        "# Load environment variables from .env file\n",
-        "load_dotenv()\n",
-        "\n",
-        "# Set up your OpenAI API key from environment variable\n",
-        "openai.api_key = \"sAPI Key\"\n",
-        "\n",
-        "def get_novel_summary(novel_title, novel_author, num_sentences=5, chapter_or_section=None):\n",
-        "    messages = [\n",
-        "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-        "    ]\n",
-        "\n",
-        "    if chapter_or_section:\n",
-        "        messages.append(\n",
-        "            {\"role\": \"user\", \"content\": f\"Please provide a summary of chapter/section '{chapter_or_section}' from the novel '{novel_title}' by {novel_author} in {num_sentences} sentences.\"}\n",
-        "        )\n",
-        "    else:\n",
-        "        messages.append(\n",
-        "            {\"role\": \"user\", \"content\": f\"Please provide a summary of the novel '{novel_title}' by {novel_author} in {num_sentences} sentences.\"}\n",
-        "        )\n",
-        "\n",
-        "    while True:\n",
-        "        try:\n",
-        "            response = openai.ChatCompletion.create(\n",
-        "                model=\"gpt-3.5-turbo\",\n",
-        "                messages=messages,\n",
-        "                max_tokens=150\n",
-        "            )\n",
-        "            summary = response.choices[0].message['content'].strip()\n",
-        "            return summary\n",
-        "        except RateLimitError:\n",
-        "            print(\"Rate limit exceeded. Retrying in 60 seconds...\")\n",
-        "            time.sleep(60)  # Wait for 60 seconds before retrying\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    novel_title = input(\"Enter the title of the novel: \")\n",
-        "    novel_author = input(\"Enter the author of the novel: \")\n",
-        "    num_sentences = int(input(\"Enter the number of sentences for the summary: \"))\n",
-        "    chapter_or_section = input(\"Enter the chapter or section (optional): \")\n",
-        "\n",
-        "    if not chapter_or_section.strip():\n",
-        "        chapter_or_section = None\n",
-        "\n",
-        "    summary = get_novel_summary(novel_title, novel_author, num_sentences, chapter_or_section)\n",
-        "    print(\"\\nSummary:\\n\")\n",
-        "    print(summary)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 731
-        },
-        "id": "QtPwP0j-BHhh",
-        "outputId": "8fb922b6-b7c5-4090-f6e1-3692bb4c8927"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter the title of the novel: Moby Dick\n",
-            "Enter the author of the novel: Melville\n",
-            "Enter the number of sentences for the summary: 2\n",
-            "Enter the chapter or section (optional): \n",
-            "Rate limit exceeded. Retrying in 60 seconds...\n",
-            "Rate limit exceeded. Retrying in 60 seconds...\n",
-            "Rate limit exceeded. Retrying in 60 seconds...\n",
-            "Rate limit exceeded. Retrying in 60 seconds...\n",
-            "Rate limit exceeded. Retrying in 60 seconds...\n",
-            "Rate limit exceeded. Retrying in 60 seconds...\n",
-            "Rate limit exceeded. Retrying in 60 seconds...\n",
-            "Rate limit exceeded. Retrying in 60 seconds...\n",
-            "Rate limit exceeded. Retrying in 60 seconds...\n",
-            "Rate limit exceeded. Retrying in 60 seconds...\n",
-            "Rate limit exceeded. Retrying in 60 seconds...\n",
-            "Rate limit exceeded. Retrying in 60 seconds...\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRateLimitError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-8a060a965bd2>\u001b[0m in \u001b[0;36mget_novel_summary\u001b[0;34m(novel_title, novel_author, num_sentences, chapter_or_section)\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m             response = openai.ChatCompletion.create(\n\u001b[0m\u001b[1;32m     30\u001b[0m                 \u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"gpt-3.5-turbo\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/openai/api_resources/chat_completion.py\u001b[0m in \u001b[0;36mcreate\u001b[0;34m(cls, *args, **kwargs)\u001b[0m\n\u001b[1;32m     24\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mTryAgain\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/openai/api_resources/abstract/engine_api_resource.py\u001b[0m in \u001b[0;36mcreate\u001b[0;34m(cls, api_key, api_base, api_type, request_id, api_version, organization, **params)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 153\u001b[0;31m         response, _, api_key = requestor.request(\n\u001b[0m\u001b[1;32m    154\u001b[0m             \u001b[0;34m\"post\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/openai/api_requestor.py\u001b[0m in \u001b[0;36mrequest\u001b[0;34m(self, method, url, params, headers, files, stream, request_id, request_timeout)\u001b[0m\n\u001b[1;32m    297\u001b[0m         )\n\u001b[0;32m--> 298\u001b[0;31m         \u001b[0mresp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgot_stream\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_interpret_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstream\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    299\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mresp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgot_stream\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapi_key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/openai/api_requestor.py\u001b[0m in \u001b[0;36m_interpret_response\u001b[0;34m(self, result, stream)\u001b[0m\n\u001b[1;32m    699\u001b[0m             return (\n\u001b[0;32m--> 700\u001b[0;31m                 self._interpret_response_line(\n\u001b[0m\u001b[1;32m    701\u001b[0m                     \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"utf-8\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/openai/api_requestor.py\u001b[0m in \u001b[0;36m_interpret_response_line\u001b[0;34m(self, rbody, rcode, rheaders, stream)\u001b[0m\n\u001b[1;32m    764\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mstream_error\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;36m200\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mrcode\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m300\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 765\u001b[0;31m             raise self.handle_error_response(\n\u001b[0m\u001b[1;32m    766\u001b[0m                 \u001b[0mrbody\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrheaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstream_error\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstream_error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mRateLimitError\u001b[0m: You exceeded your current quota, please check your plan and billing details. For more information on this error, read the docs: https://platform.openai.com/docs/guides/error-codes/api-errors.",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-8a060a965bd2>\u001b[0m in \u001b[0;36m<cell line: 40>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0mchapter_or_section\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m     \u001b[0msummary\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_novel_summary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnovel_title\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnovel_author\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_sentences\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchapter_or_section\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\nSummary:\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-13-8a060a965bd2>\u001b[0m in \u001b[0;36mget_novel_summary\u001b[0;34m(novel_title, novel_author, num_sentences, chapter_or_section)\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mRateLimitError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Rate limit exceeded. Retrying in 60 seconds...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m             \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Wait for 60 seconds before retrying\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ]
-    }
-  ]
-}
+import openai
+import time
+
+openai.api_key = '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'
+
+def get_novel_summary():
+    novel_title = input("Enter the novel title: ")
+    novel_author = input("Enter the novel author: ")
+    num_sentences = input("Enter the number of sentences for the summary: ")
+    chapter_or_section = input("Enter the chapter or section to summarize (leave blank for entire book): ")
+
+    while True:
+        try:
+            response = openai.ChatCompletion.create(
+                model="gpt-3.5-turbo",
+                messages=[
+                    {
+                        "role": "system",
+                        "content": "You are a helpful assistant."
+                    },
+                    {
+                        "role": "user",
+                        "content": f"Provide a summary of the novel '{novel_title}' by {novel_author}. "
+                                   f"Summarize in {num_sentences} sentences focusing on {chapter_or_section}."
+                    }
+                ]
+            )
+            summary = response.choices[0].message['content'].strip()
+            return summary
+        except openai.error.RateLimitError as e:
+            print("Rate limit exceeded. Retrying in 60 seconds...")
+            time.sleep(60)
+        except Exception as e:
+            print(f"An error occurred: {e}")
+            return None
+
+# Run the function and print the summary
+summary = get_novel_summary()
+if summary:
+    print("Summary:", summary)
