--- a/Book_Summary_Wrapper.ipynb
+++ b/Book_Summary_Wrapper.ipynb
@@ -1,38 +1,19 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "#!pip install --upgrade openai\n",
-        "!pip install python-dotenv\n",
-        "!pip install openai==0.28"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QtPwP0j-BHhh",
-        "outputId": "d9159003-f810-4503-f7e8-c6e2d8a12cd5"
+        "outputId": "18467a78-da25-4503-e265-e8c0c0e1d82b"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting python-dotenv\n",
             "  Downloading python_dotenv-1.0.1-py3-none-any.whl.metadata (23 kB)\n",
@@ -41,41 +22,120 @@
             "Successfully installed python-dotenv-1.0.1\n",
             "Collecting openai==0.28\n",
             "  Downloading openai-0.28.0-py3-none-any.whl.metadata (13 kB)\n",
-            "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.10/dist-packages (from openai==0.28) (2.32.3)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from openai==0.28) (4.67.1)\n",
-            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.10/dist-packages (from openai==0.28) (3.11.10)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.20->openai==0.28) (3.4.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.20->openai==0.28) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.20->openai==0.28) (2.2.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.20->openai==0.28) (2024.12.14)\n",
-            "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.28) (2.4.4)\n",
-            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.28) (1.3.2)\n",
-            "Requirement already satisfied: async-timeout<6.0,>=4.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.28) (4.0.3)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.28) (24.3.0)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.28) (1.5.0)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.28) (6.1.0)\n",
-            "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.28) (0.2.1)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.28) (1.18.3)\n",
-            "Requirement already satisfied: typing-extensions>=4.1.0 in /usr/local/lib/python3.10/dist-packages (from multidict<7.0,>=4.5->aiohttp->openai==0.28) (4.12.2)\n",
+            "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.11/dist-packages (from openai==0.28) (2.32.3)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (from openai==0.28) (4.67.1)\n",
+            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.11/dist-packages (from openai==0.28) (3.11.11)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests>=2.20->openai==0.28) (3.4.1)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests>=2.20->openai==0.28) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.20->openai==0.28) (2.3.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.20->openai==0.28) (2024.12.14)\n",
+            "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->openai==0.28) (2.4.4)\n",
+            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.11/dist-packages (from aiohttp->openai==0.28) (1.3.2)\n",
+            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->openai==0.28) (25.1.0)\n",
+            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.11/dist-packages (from aiohttp->openai==0.28) (1.5.0)\n",
+            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.11/dist-packages (from aiohttp->openai==0.28) (6.1.0)\n",
+            "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->openai==0.28) (0.2.1)\n",
+            "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->openai==0.28) (1.18.3)\n",
             "Downloading openai-0.28.0-py3-none-any.whl (76 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.5/76.5 kB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.5/76.5 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: openai\n",
             "  Attempting uninstall: openai\n",
-            "    Found existing installation: openai 1.57.4\n",
-            "    Uninstalling openai-1.57.4:\n",
-            "      Successfully uninstalled openai-1.57.4\n",
+            "    Found existing installation: openai 1.59.9\n",
+            "    Uninstalling openai-1.59.9:\n",
+            "      Successfully uninstalled openai-1.59.9\n",
             "Successfully installed openai-0.28.0\n"
           ]
         }
+      ],
+      "source": [
+        "#!pip install --upgrade openai\n",
+        "!pip install python-dotenv\n",
+        "!pip install openai==0.28"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "background_save": true
+        },
+        "id": "FO_LulbTvmZC",
+        "outputId": "21d1bf11-c81b-4202-cf7f-102b438b087c"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n",
+            "Rate limit met. Retry, 60 seconds\n"
+          ]
+        }
+      ],
       "source": [
         "import openai\n",
         "import time\n",
         "\n",
-        "openai.api_key = 'secret_key'\n",
+        "openai.api_key = 'API_key'\n",
         "\n",
         "def get_novel_summary():\n",
         "    novel_title = input(\"Enter the novel title: \")\n",
@@ -112,12 +172,21 @@
         "summary = get_novel_summary()\n",
         "if summary:\n",
         "    print(\"Summary:\", summary)\n"
-      ],
-      "metadata": {
-        "id": "FO_LulbTvmZC"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
