--- a/Statistics_Overview.ipynb
+++ b/Statistics_Overview.ipynb
@@ -24,7 +24,7 @@
    "id": "efficient-apparatus",
    "metadata": {},
    "source": [
-    "# Golden Retriever Weight: CDF, Z-Values, and Confiedence Intervals"
+    "# Golden Retriever Weight: CDF, Z-Values, and Confidence Intervals"
    ]
   },
   {
